# hico

./: .gitignore  README.md  hico.cabal  stack.yaml
app/: Main.hs
nix/: README.md  default.nix  hico.nix  shell.nix  stack.nix
src/: Hico.hs
src/Hico/: Game.hs  Types.hs
src/Hico/Config/: Cli.hs
src/Hico/Internal/: InputHandling.hs  Types.hs
src/Hico/SDL/: Interpreter.hs
