name:                hico
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hico#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-dir:              
  assets
data-files:            fonts/PICO-8.ttf

library
  hs-source-dirs:      src
  exposed-modules:     Hico
  other-modules:       Hico.Game
                     , Hico.Internal.Types
                     , Hico.Types
  default-extensions: Strict
  ghc-options:       -O2
                     -fno-warn-name-shadowing
                     -fwarn-unused-imports
                     -funbox-strict-fields
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , free
                     , mtl
                     , sdl2
                     , sdl2-ttf
  default-language:    Haskell2010

executable hico
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hico
                     , sdl2


-- Data-Files:            fonts/JF-Dot-K12.ttf
--                      , fonts/JF-Dot-K12B.ttf